kubernetes/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    app: bankapp-deploy
  name: bankapp-deploy
  namespace: bankapp-namespace
spec: 
  replicas: 2 
  selector:
    matchLabels: 
      app: bankapp-deploy
  template:
    metadata:
      labels:
        app: bankapp-deploy
    spec: 
      containers:
      - name: bankapp
        image: yashikadevops123/bank-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
